[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-humanize-bytes"
version = "0.1.1"
description = "Convert byte counts to human-readable strings and back, with formatting options"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["bytes", "humanize", "format", "filesize", "convert", "parse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-humanize-bytes"
Repository = "https://github.com/philiprehberger/py-humanize-bytes"
Issues = "https://github.com/philiprehberger/py-humanize-bytes/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_humanize_bytes"]
